[package]
name = "mash_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
chrono = "0.4.19"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
